appId: com.nxtvibes.mobile
---
- assertVisible: "NxtVibes"
- swipe:
    direction: RIGHT
- swipe:
    direction: RIGHT
- swipe:
    direction: RIGHT
- tapOn: "Join the Journey"
- assertVisible: "Sign in with Google"
