appId: com.nxtvibes.mobile
---
- tapOn: '+'
- assertVisible: "Create New Trip"
- assertVisible: "Create a Trip Manually"
- assertVisible: "Create with NxtVibes AI"
- tapOn: "Create a Trip Manually"
- assertVisible: "Let's Start! 🚀"
- tapOn:
    text: "" # Back button
